# harper.blog

./: .gitignore  .gitmodules  .mcp.json  .mise.toml  404.md  AUTHORS  CLAUDE.md  CNAME  CREATE_ISSUES.sh  GITHUB_ISSUES.md  Gemfile  ISSUES_SUMMARY.md  Makefile  README.md  _config.yml  _headers  about.md  archives.md  categories.md  cleaner.py  config.yaml  gitlog.md  go.mod  go.sum  index.md  netlify.toml  package.json  sitemap.xml  tags.py  tailwind.config.js  writing.md
css/: main.css
tools/: .env  .gitignore  README.md  README_translation_keys.md  TRANSLATION_KEY_GUIDE.md  add_translation_keys.py  api_security.py  archive_old_links.py  backfill_goodreads_ids.py  batch_translate.py  check_micro_archive.sh  check_nata2_archive_availability.py  check_nata2_cdx.py  check_nata2_smart_match.py  check_themes.py  check_translation_keys.py  convert_posts_to_page_bundles.py  deduplicate_notes.py  detect_empty_posts.py  fix_book_dates.py  fix_empty_dates.py  generate_og_images.py  grab_micro_posts.py  grab_micro_posts_fixed.py  grab_read_books.py  grab_read_books_historical.py  grab_spotify_saved_tracks.py  grab_starred_links.py  migrate_nata2_content.py  nata2_archive_summary.py  note_utils.py  pyproject.toml  rename_book_dirs.py  rename_posts.py  requirements.txt  test_api_security.py  test_frontmatter.py  translate_core_files.sh  translate_japanese_posts.sh
tools/content/notes/2024-09-13-15-06-00-untitled/: index.md
tools/content/notes/2024-09-14-17-18-57-untitled/: index.md
tools/tests/: test_backfill_goodreads_ids.py  test_fix_book_dates.py  test_grab_read_books.py
(+19123 files in other folders)
